test_regress/t/t_dpi_logic_bad.out
%Error: t/t_dpi_logic_bad.v:11: DPI function may not return type BASICDTYPE 'logic' (IEEE 2017 35.5.5)
%Error: Exiting due to
